--- a/styles/style.css
+++ b/styles/style.css
@@ -130,10 +130,94 @@ section {
 }
 
 /* Feature Section */
-
-.feature-section {
+.match-section {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: repeat(4, 1fr);
   grid-gap: 10px;
-  background-color: red;
+  /* background-color: red; */
 }
+
+@media screen and (max-width: 576px) {
+  .match-section {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 10px;
+  }
+}
+@media (min-width: 375px) and (max-width: 992px) {
+  .match-section {
+    grid-template-columns: repeat(1, 1fr);
+    /* grid-auto-rows: minmax(300px, auto); */
+  }
+}
+.vertical-nav {
+  background-color: #161616;
+  padding: 25px;
+  border-radius: 10px;
+  width: 200px;
+}
+
+@media (min-width: 375px) and (max-width: 992px) {
+  .vertical-nav {
+    background-color: #fff;
+    width: 96%;
+  }
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+}
+@media (min-width: 375px) and (max-width: 992px) {
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+  }
+}
+
+li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  /* border-radius: 8px; */
+  text-decoration: none;
+  border-radius: 8px;
+  margin-top: 10px;
+  background-color: azure;
+}
+@media (min-width: 375px) and (max-width: 992px) {
+  li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    border: 1px solid #e8e8e8;
+    margin-right: 5px;
+    text-decoration: none;
+    border-radius: 8px;
+    margin-top: 10px;
+    background-color: azure;
+  }
+}
+
+li a.active {
+  background-color: #dd0000;
+  color: white;
+  border-radius: 8px;
+}
+/* .matches {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+} */
+.match {
+  border: 1px solid #e8e8e8;
+  border-radius: 10px;
+}
+/* li a:hover:not(.active) {
+  background-color: rgb(250, 244, 244);
+  color: white;
+} */
