--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,21 @@ section {
 .button-danger {
   background-color: #dd0000;
 }
+.button-light {
+  background-color: #fff;
+  border: 1px solid #f1f1f1;
+}
+.anchor-button {
+  text-decoration: none;
+  background: #fff;
+  padding: 4px 18px;
+  border-radius: 5px;
+  border: 1px solid #2b2b2b;
+  color: #161616;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+}
 .banner-button {
   margin-left: 35px;
 }
@@ -216,6 +231,26 @@ li a.active {
 .match {
   border: 1px solid #e8e8e8;
   border-radius: 10px;
+}
+.card {
+  /* padding: 1rem; */
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  background-color: #fff;
+  border-radius: 8px;
+  font-size: 16px;
+  color: #f2f2f2;
+  border: 1px solid rgba(197, 189, 197, 0.4);
+  word-wrap: break-word;
+  min-width: 0;
+}
+.card-body {
+  flex: 1 1 auto;
+  padding: 1rem;
+  font-size: 16px;
+  font-weight: 400;
+  text-align: start;
 }
 /* li a:hover:not(.active) {
   background-color: rgb(250, 244, 244);
