--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,15 @@ section {
   margin: 1em;
   border-radius: 10px;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 15px 0;
+}
 /* Banner Section */
 .header-wrapper {
   display: grid;
@@ -165,6 +174,17 @@ section {
     /* grid-auto-rows: minmax(300px, auto); */
   }
 }
+/* .matches {
+  display: grid;
+  grid-template-columns: repeat(2, 2fr);
+} */
+/* @media (min-width: 375px) and (max-width: 992px) {
+  .matches {
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+  }
+} */
+
 .vertical-nav {
   background-color: #161616;
   padding: 25px;
@@ -239,8 +259,8 @@ li a.active {
   flex-direction: column;
   background-color: #fff;
   border-radius: 8px;
-  font-size: 16px;
-  color: #f2f2f2;
+  color: #161616;
+  font-weight: 600;
   border: 1px solid rgba(197, 189, 197, 0.4);
   word-wrap: break-word;
   min-width: 0;
@@ -251,6 +271,20 @@ li a.active {
   font-size: 16px;
   font-weight: 400;
   text-align: start;
+}
+.card-text {
+  padding: 10px 18px;
+}
+.card-footer {
+  padding: 10px 18px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  color: #959292;
+  text-transform: lowercase;
+}
+.margin-right {
+  margin-right: 15px;
 }
 /* li a:hover:not(.active) {
   background-color: rgb(250, 244, 244);
