--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,18 @@ h6,
 p {
   margin: 15px 0;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 15px;
+}
+@media (min-width: 375px) and (max-width: 992px) {
+  .grid-container {
+    /* display: grid; */
+    grid-template-columns: 1fr;
+  }
+}
 /* Banner Section */
 .header-wrapper {
   display: grid;
@@ -156,7 +168,7 @@ p {
 /* Feature Section */
 .match-section {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   /* background-color: red; */
 }
@@ -168,9 +180,9 @@ p {
     grid-gap: 10px;
   }
 }
-@media (min-width: 375px) and (max-width: 992px) {
+@media (min-width: 575px) and (max-width: 992px) {
   .match-section {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     /* grid-auto-rows: minmax(300px, auto); */
   }
 }
@@ -190,6 +202,7 @@ p {
   padding: 25px;
   border-radius: 10px;
   width: 200px;
+  max-height: 156px;
 }
 
 @media (min-width: 375px) and (max-width: 992px) {
@@ -264,6 +277,7 @@ li a.active {
   border: 1px solid rgba(197, 189, 197, 0.4);
   word-wrap: break-word;
   min-width: 0;
+  min-height: 170px;
 }
 .card-body {
   flex: 1 1 auto;
@@ -286,7 +300,29 @@ li a.active {
 .margin-right {
   margin-right: 15px;
 }
-/* li a:hover:not(.active) {
-  background-color: rgb(250, 244, 244);
-  color: white;
-} */
+
+.flag {
+  display: flex;
+  justify-content: space-around;
+  padding: 35px 15px 0;
+}
+.date {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* margin: 0; */
+}
+.country {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 0;
+}
+.time {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 20px;
+  margin-top: 0;
+}
